# MagickExamples

./: CMakeLists.txt  FileDialogProvide.cpp  FileDialogProvide.h  Image.cpp  Image.h  InputDegrees.cpp  InputDegrees.h  InputSize.cpp  InputSize.h  InputWindow.h  README.md  Watermark.cpp  Watermark.h  main.cpp
